# modern-ml

./: .gitignore  pyproject.toml  requirements.lock.txt  requirements.txt
case/instructions/: case_overview.md
case/notebooks/: evaluation.ipynb  first_look.ipynb
case/prompts/: 1_evaluation_notebook.md
week_1/model/: baseline_model.joblib  best_params.json  feat_selection_model.joblib  selected_features_list.json  tunned_model.joblib
week_1/notebooks/: 1_dataset_first_look.ipynb  2_define_churn.ipynb  3_feature_engineering.ipynb  4_sample_date_split.ipynb  5_feature_selection.ipynb  6_tuning.ipynb  6_tuning.md  7_calibration.ipynb  Churn Case.md
week_1/prompts/: 12_Explain Block.md
week_1/scripts/: download_raw_kaggle_churn_datasets.py
week_2/data/processed/: features_list.json
week_2/notebooks/: 2_pre_processing_and_feat_eng.ipynb  3_quantile_experiments.ipynb
week_3/data/raw/: bcdata.sgs.433.csv  inflation.csv
week_3/notebooks/: 1_first_look.ipynb  2_forecasting.ipynb  3_now_casting_exg_cross_val.ipynb
